# silo

./: CLAUDE.md  Cargo.toml  README.md
skills/silo/: SKILL.md
src/: color.rs  complete.rs  config.rs  error.rs  exit.rs  git.rs  main.rs  names.rs  process.rs  prompt.rs  removal.rs  runner.rs  sandbox.rs  silo.rs
src/commands/: cd.rs  exec.rs  gc.rs  list.rs  merge.rs  mod.rs  new.rs  prune.rs  rebase.rs  reset.rs  rm.rs  sandbox.rs  shell.rs  skill.rs
src/shell/: mod.rs  zsh.rs
tests/: integration.rs
tests/common/: mod.rs
