[package]
name = "silo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
